# autodriver_laser_object_segmentation

./: CMakeLists.txt  README.md  TESTS.md  package.xml
autodriver_laser_object_segmentation/: __init__.py  laser_obstacle_detector_core.py
config/: obstacle_detector.rviz  params.yaml
include/autodriver_laser_object_segmentation/: laser_obstacle_detector_core.hpp
launch/: obstacle_detector.launch.py
scripts/: laser_obstacle_detector.py  run_bag_test.sh
src/: laser_obstacle_detector_core.cpp  laser_obstacle_detector_node.cpp
test/: profile_latency.py  test_laser_obstacle_detector_core.py
